2012-10-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkButton.h: Backport of ::tk::mac::useCompatibilityMetrics
	* generic/tkButton.c  handling and scrollbar metrics handling from trunk.
	* generic/tkScrollbar.h
	* generic/tkScrollbar.c
	* macosx/tkMacOSXButton.c
	* macosx/tkMacOSXScrlbr.c
	* unix/tkUnixPort.h
	* win/tkWinButton.c
	* win/tkWinScrlbr.c

2012-10-09  Andreas Kupries  <andreask@activestate.com>

	Cherrypick Merge, Backport of [6223d9e067]. Restored from
	tk-cocoa-8-5-bacport-branch, did not survive the merge.
	See trunk 2012-05-29 Donal K. Fellows

	* generic/tkInt.decls (TkMacOSXDrawable): Added OSX-specific mechanism
	to allow retrieval of the drawing surface. Allows Canvas3d to be
	adapted to 8.6.

2012-09-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.h:     Add 8 colors to the supported color list
	* generic/tkColor.c:   (aqua, crimson, fuchsia, indigo, lime,
	* unix/tkUnixColor.c:  olive, silver and teal), part of TIP #403
	* xlib/rgb.txt
	* xlib/xcolors.c

2012-09-26  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in:    Compile win32 binaries with -DTCL_NO_DEPRECATED

2012-09-25   Kevin Walzer <wordtech@users.sourceforge.net>

	* macosx/*: Merge Tk-Cocoa backport into core-8-5-branch

2012-09-13  Donal K. Fellows  <dkf@users.sf.net>

	* generic/ttk/ttkEntry.c (EntryDisplay): [Bug 3567453]: Clip regions
	* generic/ttk/ttkLabel.c (TextDraw): must be cleared with XSetClipMask
	* xlib/xgc.c (TkSetRegion): and not TkSetRegion, or crashes will ensue
	on X11-based builds, which can't handle None for a region argument.
	Added a clean panic to the non-X11 TkSetRegion to catch this case and
	stop such confusion from happening again.

2012-09-11  Donal K. Fellows  <dkf@users.sf.net>

	* generic/ttk/ttkEntry.c (EntryDisplay): [Bug 3566594]: Must manually
	* generic/ttk/ttkLabel.c (TextDraw):     reset the clip region of GCs
	when not using the Xft font renderer (well, especially on classic X11)